# BELL

./: .gitignore  README.md  pyproject.toml  start.py
docs/: ARCHITECTURE.md  README.md
docs/ref/: index.md
docs/ref/COSY/: README.md
docs/ref/MADX/: README.md
docs/ref/papers/: README.md
src/bell/: README.md  __init__.py  elements.py  lattice.py  optics.py  particle.py
