[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bell-accelerator"
version = "0.1.0"
description = "Minimal accelerator lattice + tracking toolkit (MVP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
